refactor CMake for easily setting up additional dogfooding projects

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,6 @@ find_package(portaudio CONFIG REQUIRED)
 find_package(SndFile CONFIG REQUIRED)
 find_package(rtmidi CONFIG REQUIRED)
 
-find_package(Qt6 COMPONENTS Core Gui Widgets Charts REQUIRED)
 
 set(CLOVER_PATH ~/code/clover)
 include(${CLOVER_PATH}/CMakeLists.Clover.txt)
@@ -28,20 +27,22 @@ target_link_libraries(Clover PUBLIC
     portaudio
     SndFile::sndfile
     RtMidi::rtmidi
-)
+    )
 
+#--------------------------------
+# project setup
+
+function(setup_project executable_name)
+  file(GLOB_RECURSE SOURCE_LIST CONFIGURE_DEPENDS ${CMAKE_CURRENT_LIST_DIR}/${executable_name}/*.cpp)
+  add_executable(${executable_name} ${SOURCE_LIST})
+  target_link_libraries(${executable_name} PUBLIC ${ARGN})
+endfunction()
+
+find_package(Qt6 COMPONENTS Core Gui Widgets Charts REQUIRED)
 
 #--------------------------------
 # projects
 
-#----------------
-# 01-qt-plot
+setup_project(01-qt-plot Clover Qt6::Core Qt6::Gui Qt6::Widgets Qt6::Charts)
 
-# note: project setup basics can probably be a re-usable function that takes a string
-file(GLOB_RECURSE SOURCE_LIST_01_qt_plot
-    CONFIGURE_DEPENDS
-    ${CMAKE_CURRENT_LIST_DIR}/01-qt-plot/*.cpp
-)
 
-add_executable(01-qt-plot ${SOURCE_LIST_01_qt_plot})
-target_link_libraries(01-qt-plot PUBLIC Clover Qt6::Core Qt6::Gui Qt6::Widgets Qt6::Charts)
